--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             />
           </div>
           <button type="submit">Se connecter</button>
-          <a id="show-register" href="#">Créer un Compte</a>
+          <a id="show-register" href="#">Créer un compte</a>
         </form>
       </div>
 
