--- a/admin-board.html
+++ b/admin-board.html
@@ -45,6 +45,9 @@
           </table>
         </div>
       </section>
+      <footer>
+        <p>&copy; 2024 Future School Talent - Ayman Kadiri</p>
+      </footer>
     </div>
 
     <!-- Modal Show Difficulty d'un blocage -->
