--- a/student-board.html
+++ b/student-board.html
@@ -50,6 +50,10 @@
           </button>
         </div>
       </section>
+
+      <footer>
+        <p>&copy; 2024 Future School Talent - Ayman Kadiri</p>
+      </footer>
     </div>
 
     <!-- Modal Etudiant Ajouter Blocage -->
